--- a/AchieveDetail.html
+++ b/AchieveDetail.html
@@ -92,7 +92,7 @@
         <!-- Navigation Menu start-->
 
         <nav id="topNav" class="navbar navbar-default main-menu">
-            <a class="navbar-brand page-scroll" href="index.html" style="margin-right:0 !important;"><img src="images/logo/mainlogo.png" alt="東海大學" style="margin-top: 0 !important; height:90px;"></a>
+            <a class="navbar-brand page-scroll" href="MainPage.html" style="margin-right:0 !important;"><img src="images/logo/mainlogo.png" alt="東海大學" style="margin-top: 0 !important; height:90px;"></a>
             <div class="container">
                 <button class="navbar-toggler hidden-md-up pull-right" type="button" data-toggle="collapse" data-target="#collapsingNavbar">
                     ☰
@@ -100,42 +100,42 @@
                 <div class="collapse navbar-toggleable-md" id="collapsingNavbar">
                     <ul class="nav navbar-nav" style="font-family: sans-serif; font-size: 12px;">
                         <li>
-                            <a target="_self" href="index.html#introduction">USR介紹</a>
+                            <a target="_self" href="MainPage.html#introduction">USR介紹</a>
                         </li>
                         <li>
-                            <a target="_self" href="index.html#partner">夥伴介紹</a>
+                            <a target="_self" href="MainPage.html#partner">夥伴介紹</a>
                         </li>
                         <li>
-                            <a target="_self" href="index.html#news">最新消息</a>
+                            <a target="_self" href="MainPage.html#news">最新消息</a>
                         </li>
 
                         <!--<li>
-                            <a target="_self" href="index.html#event">最新活動</a>
+                            <a target="_self" href="MainPage.html#event">最新活動</a>
                         </li>-->
                         <li class="active">
-                            <a target="_self" href="index.html#achieve">成果與紀錄</a>
+                            <a target="_self" href="MainPage.html#achieve">成果與紀錄</a>
                         </li>
                         <!--<li>
-                            <a target="_self" href="index.html#board">公告事項</a>
+                            <a target="_self" href="MainPage.html#board">公告事項</a>
                         </li>-->
 
                         <li>
-                            <a target="_self" href="index.html#rule">法規查詢</a>
+                            <a target="_self" href="MainPage.html#rule">法規查詢</a>
                         </li>
                         <li>
-                            <a target="_self" href="index.html#chart">表單下載</a>
+                            <a target="_self" href="MainPage.html#chart">表單下載</a>
                         </li>
                         <li>
-                            <a target="_self" href="index.html#elderlyarea">東海樂齡專區</a>
+                            <a target="_self" href="MainPage.html#elderlyarea">東海樂齡專區</a>
                         </li>
                         <li>
-                            <a target="_self" href="index.html#sourcelink">高齡資源網站連結</a>
+                            <a target="_self" href="MainPage.html#sourcelink">高齡資源網站連結</a>
                         </li>
                         <li>
-                            <a target="_self" href="index.html#signup">線上報名</a>
+                            <a target="_self" href="MainPage.html#signup">線上報名</a>
                         </li>
                         <li>
-                            <a href="index.html#contact">聯絡我們</a>
+                            <a href="MainPage.html#contact">聯絡我們</a>
                         </li>
                         <li>
                             <a href="AdminLogin.html">管理者登入</a>
